More support for old java versions